# ai-todo

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.agents/skills/todolist-cli/: SKILL.md
desktop/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
desktop/scripts/: generate-android-icons.py  sign-android-apk.mjs
desktop/src/: App.test.tsx  App.tsx  api.ts  auth.ts  config.ts  main.tsx  query.ts  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: allow-tray-settings.toml
desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
docs/: cli-usage.md  prototype.html  tauri-desktop-android-plan.md  todo-list-cli-design.md  todo-list-execution-plan.md  todo-list-implementation-plan.md
scripts/: install.sh
server/: Dockerfile  alembic.ini  pyproject.toml
server/app/: __init__.py  auth.py  config.py  constants.py  database.py  errors.py  main.py  models.py  repositories.py  schemas.py  services.py
server/app/cli/: auth_store.py  client.py  inputs.py  main.py  output.py  selectors.py
server/app/routers/: api_keys.py  auth.py  checklist.py  groups.py  health.py  lists.py  tags.py  tasks.py
server/migrations/: env.py
server/migrations/versions/: 20260611_0001_initial.py  20260615_0002_list_groups_and_archive.py  20260621_0003_api_keys.py
server/tests/: conftest.py  test_api.py  test_cli_api_key.py  test_cli_auth.py  test_config.py
(+58 files in other folders)
