[project]
name = "todolist-server"
version = "0.1.0"
description = "FastAPI backend for the AI 清单 desktop application"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "typer>=0.15,<1",
    "tzdata>=2024.2",
    "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
todo = "app.cli.main:app"

[dependency-groups]
dev = [
    "aiosqlite>=0.20,<1",
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
